# mybox

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: design-preview.html  design-spec.md
src/: App.css  App.tsx  CalendarPanel.tsx  ErrorBanner.tsx  Sidebar.tsx  WorkbenchView.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: crud.rs  db.rs  error.rs  lib.rs  main.rs  settings.rs  sync.rs  workbench.rs
